# embedded-sdk

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  sdkconfig.old  ws.js
main/: CMakeLists.txt  main.cpp  wifi.cpp
